// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Correctly applies horizontal/vertical alignment to Stack (horizontal) 1`] = `
<body>
  <div>
    <div
      class="___xcshgu0 f1063pyq f22iagw fni485r f1aaj51y ft97ctm f4d9j23 f122n59"
    />
  </div>
</body>
`;

exports[`Input Correctly applies horizontal/vertical alignment to Stack (vertical) 1`] = `
<body>
  <div>
    <div
      class="___qilspy0 f1vx9l62 f22iagw fni485r f1aaj51y ft97ctm f122n59 f4d9j23"
    />
  </div>
</body>
`;

exports[`Input renders a basic Stack 1`] = `
<body>
  <div>
    <div
      class="___llbrur0 f1063pyq f22iagw fni485r f1aaj51y ft97ctm f1s9ku6b f1s2louj"
    />
  </div>
</body>
`;

exports[`Input renders a divider Stack 1`] = `
<body>
  <div>
    <div
      class="___llbrur0 f1063pyq f22iagw fni485r f1aaj51y ft97ctm f1s9ku6b f1s2louj"
    >
      <p>
        Hello
      </p>
       - 
      <p>
        Hello
      </p>
    </div>
  </div>
</body>
`;

exports[`Input renders a divider Stack with once child 1`] = `
<body>
  <div>
    <div
      class="___llbrur0 f1063pyq f22iagw fni485r f1aaj51y ft97ctm f1s9ku6b f1s2louj"
    />
  </div>
</body>
`;

exports[`Input renders a vertical Stack 1`] = `
<body>
  <div>
    <div
      class="___1qd5x31 f1vx9l62 f22iagw fni485r f1aaj51y ft97ctm f1s2louj f1s9ku6b"
    />
  </div>
</body>
`;
